2015-11-12  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/QJulia: Added.

2015-11-11  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/Particle: Added.

2015-11-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/opencl_gl_ext.rb: Added.

2015-11-07  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/opencl_gl.rb: Added.

2015-11-05  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/add_numbers: Added.

2015-11-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample: Added.

2015-10-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* (Announce) First release.